# hotham

./: .gitattributes  .gitignore  ACKNOWLEDGEMENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  asteroid.cap  asteroid_release.cap  criterion.toml  cspell.json  cubeworld.cap  cubeworld_quest.cap  hotham.code-workspace  inverse_kinematics.md  inverse_kinematics_snapshot_2023-04-09_12.12.52.json  inverse_kinematics_snapshot_2023-04-12_22.23.47.json  inverse_kinematics_snapshot_2023-04-13_21.06.56.json  inverse_kinematics_snapshot_2023-04-13_21.40.18.json  inverse_kinematics_snapshot_2023-04-13_21.40.20.json  inverse_kinematics_snapshot_2023-04-13_22.04.18.json  inverse_kinematics_snapshot_2023-04-16_00.14.45.json  inverse_kinematics_snapshot_2023-04-16_21.56.59.json  inverse_kinematics_snapshot_2023-04-16_21.57.01.json  inverse_kinematics_snapshot_2023-04-17_21.49.35.json  inverse_kinematics_snapshot_2023-04-19_00.13.58.json  notes.md  pbr_test.ps1  run_on_device.ps1  run_on_device.sh  run_on_simulator.ps1  shell.nix  test.ps1  workspace.code-workspace
examples/beat-saber-clone/: Cargo.toml  README.md  run_on_device.ps1  run_on_simulator.ps1
examples/beat-saber-clone/assets/: axis_widget.glb  axis_widget.gltf  beat_saber.glb  beat_saber.gltf
examples/beat-saber-clone/src/: lib.rs  main.rs
examples/complex-scene/: Cargo.toml  README.md
examples/complex-scene/scripts/: run_on_device.ps1  run_on_device.sh
examples/complex-scene/src/: custom_render_context.rs  custom_rendering.rs  lib.rs  main.rs  navigation.rs
examples/crab-saber/: Cargo.toml  README.md  run_on_device.ps1  run_on_simulator.ps1
examples/crab-saber/scripts/: run_on_device.ps1  run_on_device.sh
examples/crab-saber/src/: game_context.rs  lib.rs  main.rs
examples/simple-scene/: Cargo.toml  run_on_device.ps1
examples/simple-scene/scripts/: run_on_device.ps1  run_on_device.sh
examples/simple-scene/src/: audio_player.rs  axes.rs  ik_selector.rs  inverse_kinematics.rs  lib.rs  main.rs  thumbstick_influence.rs  utils.rs  xpbd.rs  xpbd_audio_bridge.rs  xpbd_collisions.rs  xpbd_rerun.rs  xpbd_shape_constraints.rs  xpbd_state.rs  xpbd_substep.rs  xr_inputs_rerun.rs
examples/skin/: Cargo.toml
examples/skin/scripts/: run_on_device.ps1  run_on_device.sh
examples/skin/src/: lib.rs  main.rs
hotham/: Cargo.toml  build.rs  matrix_failed.json
hotham-asset-client/: Cargo.toml
hotham-asset-client/src/: client.rs  lib.rs  message.rs
hotham-asset-server/: Cargo.toml
hotham-asset-server/src/: main.rs  server.rs
hotham-asteroid/: Cargo.toml  README.md
hotham-asteroid/assets/: animation_test.gltf  asteroid.gltf  asteroid_optimized_img0.ktx2  asteroid_optimized_img1.ktx2  asteroid_optimized_img2.ktx2  asteroid_optimized_img3.ktx2  asteroid_optimized_img4.ktx2  damaged_helmet.gltf  hand.gltf  left_hand.glb  left_hand.gltf  right_hand.gltf  structure_normal.ktx2
hotham-asteroid/benches/: model_loading.rs
hotham-asteroid/src/: asteroid.rs  cubeworld.rs  lib.rs  main.rs
hotham-asteroid/src/shaders/: asteroid.vert  asteroid.vert.spv  cube.frag  starfield.frag.spv  starfield.vert.spv
hotham-cubeworld/: Cargo.toml  build.rs
hotham-cubeworld/assets/: Map__12_Cellular.tga  Map__15_Noise.tga  Map__4_Mix.tga  asteroid OBJ.mtl  asteroid.glb
hotham-cubeworld/src/: cubeworld.rs  lib.rs  main.rs
hotham-cubeworld/src/shaders/: cube.frag  cube.frag.spv  cube.vert  cube.vert.spv
hotham-debug-server/: Cargo.toml
hotham-debug-server/src/: debug_data.rs  debug_frame.rs  lib.rs
hotham-editor/: Cargo.toml  README.md
hotham-editor-protocol/: Cargo.toml  README.md
hotham-editor-protocol/src/: lib.rs
hotham-editor/src/: camera.rs  gui.rs  input_context.rs  main.rs
hotham-editor/src/shaders/: triangle.frag  triangle.frag.spv  triangle.vert  triangle.vert.spv
hotham-openxr-client/: Cargo.toml  README.md  hotham-openxr-client.json  openxr_client.reg  test.ps1
hotham-openxr-client/src/: action_state.rs  client.rs  client_state.rs  lib.rs  space_state.rs  state.rs
hotham-simulator/: Cargo.toml  README.md  build.rs  hotham_simulator.json  loader_interfaces.h  openxr_simulator.reg  test.ps1  test.sh
hotham-simulator/build_input/: viewdisplay.frag  wrapper.h
hotham-simulator/build_input/openxr/: xr_linear.c
hotham-simulator/src/: action_state.rs  bindings.rs  inputs.rs  lib.rs  openxr_loader.rs  simulator.rs  space_state.rs  state.rs  windowing.rs
hotham-simulator/src/shaders/: viewdisplay.frag  viewdisplay.frag.spv
hotham/assets/: left_hand.gltf  right_hand.gltf
hotham/benches/: model_loading.rs  transform_system.rs
hotham/data/: brdf_lut_android.ktx2  diffuse_out.ktx2  environment_map_diffuse.ktx2  environment_map_specular.ktx2  environment_map_specular_android.ktx2
hotham/shaders/: common.glsl  gui.vert.spv  model.frag  model.frag.spv  model.vert  model.vert.spv  pbr.frag.spv  pbr.vert.spv
hotham/src/: animation.rs  app.rs  buffer.rs  camera.rs  engine.rs  frame.rs  gltf_loader.rs  hand.rs  hotham_error.rs  image.rs  lib.rs  linear.rs  mesh.rs  model.rs  node.rs  renderer.rs  scene_data.rs  skin.rs  swapchain.rs  texture.rs  uniform_buffer_object.rs  util.rs  vertex.rs  view_matrix.rs  vulkan_context.rs
hotham/src/asset_importer/: mod.rs  scene.rs
hotham/src/components/: animation_controller.rs  animation_target.rs  audio_source.rs  collider.rs  global_transform.rs  grabbable.rs  hand.rs  hmd.rs  hologram.rs  info.rs  joint.rs  local_transform.rs  material.rs  mesh.rs  mod.rs  pane.rs  panel.rs  parent.rs  physics_controlled.rs  pointer.rs  primitive.rs  rigid_body.rs  room.rs  root.rs  skin.rs  sound_emitter.rs  stage.rs  transform.rs  transform_matrix.rs  ui_panel.rs  visible.rs
hotham/src/contexts/: audio_context.rs  gui_context.rs  haptic_context.rs  input_context.rs  mod.rs  physics_context.rs  render_context.rs  vulkan_context.rs
hotham/src/rendering/: buffer.rs  camera.rs  descriptors.rs  frame.rs  gambier_buffer.rs  hologram_vertex.rs  image.rs  legacy_buffer.rs  light.rs  material.rs  memory.rs  mesh_data.rs  mod.rs  primitive.rs  (+5 more)
(+227 files in other folders)
