[workspace]
members = [
  "benchmarks/stress-test",
  "examples/complex-scene",
  "examples/crab-saber",
  "examples/custom-rendering",
  "examples/shared",
  "examples/simple-scene",
  "hotham-asset-client",
  "hotham-asset-server",
  "hotham-simulator",
  "hotham-editor",
  "hotham-editor-client",
  "hotham-openxr-client",
  "hotham",
]

# Make performance critical packages compile with optimizations
[profile.dev.package.rapier3d]
opt-level = 3

[profile.dev.package.parry3d]
opt-level = 3

[profile.dev.package.nalgebra]
opt-level = 3

[profile.dev.package.glam]
opt-level = 3

[profile.dev.package.gltf]
opt-level = 3

[profile.dev.package.gltf-json]
opt-level = 3

[profile.dev.package.serde]
opt-level = 3

[profile.dev.package.image]
opt-level = 3

[profile.dev.package.png]
opt-level = 3

[profile.dev.package.bytemuck]
opt-level = 3

[profile.dev.package.symphonia]
opt-level = 3

[profile.dev.package.symphonia-core]
opt-level = 3

[profile.dev.package.symphonia-bundle-mp3]
opt-level = 3
