[workspace]
members = [
    "benchmarks/stress-test",
    "examples/complex-scene",
    "examples/crab-saber",
    "examples/custom-rendering",
    "examples/shared",
    "examples/simple-scene",
    "hotham-asset-client",
    "hotham-asset-server",
    "hotham-editor",
    "hotham-editor-protocol",
    "hotham-openxr-client",
    "hotham",
]
resolver = "2"

[workspace.dependencies]
ash = "0.38.0"
anyhow = "1.0"
bitflags = "1.3"
cpal = "0.15.2"
ctrlc = { version = "3", features = ["termination"] }
egui = "0.15"
env_logger = "0.11"
generational-arena = "0.2.8"
glam = { features = ["mint", "serde", "approx"], version = "0.23" }
gltf = { version = "1.0", features = [
    "KHR_lights_punctual",
    "KHR_materials_unlit",
    "names",
    "utils",
], default-features = false }
half = "2.1.0"
hecs = "0.10.1"
hotham-asset-client = { path = "../hotham-asset-client" }
id-arena = "2.2.1"
image = { version = "0.24.3", default-features = false, features = [
    "jpeg",
    "png",
] }
itertools = "0.10.0"
ktx2 = { git = "https://github.com/BVE-Reborn/ktx2", rev = "be27131c716686a416e6a805a26384f74a7353ff" }
log = "0.4"
mint = "0.5.6"
notify-debouncer-mini = "0.2.1"
oddio = "0.5"
openxr = { features = ["loaded", "mint"], version = "0.17" }
rand = "0.8"
rapier3d = "0.17"
ruzstd = "0.3"
serde = { version = "1.0", features = ["derive"] }
symphonia = { version = "0.5", default-features = false, features = ["mp3"] }
thiserror = "1.0"
tokio = { version = "1.0.1", default-features = false, features = ["rt"] }
vk-shader-macros = "0.2.8"


# Make performance critical packages compile with optimizations
[profile.dev.package.rapier3d]
opt-level = 3

[profile.dev.package.parry3d]
opt-level = 3

[profile.dev.package.nalgebra]
opt-level = 3

[profile.dev.package.glam]
opt-level = 3

[profile.dev.package.gltf]
opt-level = 3

[profile.dev.package.gltf-json]
opt-level = 3

[profile.dev.package.serde]
opt-level = 3

[profile.dev.package.image]
opt-level = 3

[profile.dev.package.png]
opt-level = 3

[profile.dev.package.bytemuck]
opt-level = 3

[profile.dev.package.symphonia]
opt-level = 3

[profile.dev.package.symphonia-core]
opt-level = 3

[profile.dev.package.symphonia-bundle-mp3]
opt-level = 3
