[package]
edition = "2021"
name = "hotham-asset-server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
futures-util = {version = "0.3.11", default-features = false, features = ["io"]}
hotham-asset-client = {path = "../hotham-asset-client"}
notify-debouncer-mini = {version = "*", default-features = false}
quinn = {version = "0.9", features = ["tls-rustls"]}
rcgen = "0.10.0"
rustls = {version = "0.20.3", features = ["dangerous_configuration", "quic"]}
tokio = {version = "1.21.2", features = ["full"]}
