[package]
authors = ["Kane Rogers <kane.m.rogers@gmail.com>"]
build = "build.rs"
edition = "2018"
name = "hotham-asteroid"
version = "0.1.0"

[target.'cfg(target_os = "android")'.lib]
crate-type = ["lib", "cdylib"]

[dependencies]
cgmath = "0.18"
gltf = "0.16"
hotham = {path = "../hotham"}
image = "0.23"
itertools = "0.10.0"

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.3.0"

[build-dependencies]
shaderc = "0.7"

[package.metadata.android]
apk_label = "Hotham Asteroid"
fullscreen = true
libs = [
  "lib/libopenxr_loader.so",
  "lib/libVkLayer_khronos_validation.so",
]
target_sdk_version = 26

[[package.metadata.android.application.intent_filter]]
actions = ["android.intent.action.MAIN"]
categories = ["com.oculus.intent.category.VR", "android.intent.category.LAUNCHER"]
