[package]
authors = ["Kane Rogers <kane.m.rogers@gmail.com>"]
edition = "2018"
name = "hotham-asteroid"
version = "0.1.0"

[lib]
crate-type = ["lib", "cdylib"]

[[bin]]
name = "hotham-asteroid"
path = "src/main.rs"

[dependencies]
hotham = {path = "../hotham"}

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.3.0"

[package.metadata.android]
apk_label = "Hotham Asteroid"
assets = "assets"
fullscreen = true
libs = [
  "lib/libopenxr_loader.so",
  "lib/libVkLayer_khronos_validation.so",
]
target_sdk_version = 26

[[package.metadata.android.application.intent_filter]]
actions = ["android.intent.action.MAIN"]
categories = ["com.oculus.intent.category.VR", "android.intent.category.LAUNCHER"]
