[package]
edition = "2018"
name = "hotham-debug-server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
futures-channel = "0.3"
futures-util = {version = "0.3", default-features = false, features = ["async-await", "sink", "std"]}
schemars = "0.8"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_repr = "0.1"
tokio = {version = "1.12.0", default-features = false, features = ["io-std", "macros", "net", "rt-multi-thread", "time", "sync"]}
tokio-stream = {version = "0.1.7", features = ["sync"]}
tokio-tungstenite = "0.15.0"
tokio-util = "0.6"
