[package]
description = "Simple debug tool for debugging Hotham applications"
edition = "2018"
license = "MIT OR Apache-2.0"
name = "hotham-debug-server"
repository = "https://github.com/leetvr/hotham"
version = "0.1.0"

[dependencies]
approx = "0.5"
futures = "0.3"
futures-channel = "0.3"
futures-util = {version = "0.3", default-features = false, features = ["async-await", "sink", "std"]}
rand = "0.8"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_repr = "0.1"
tokio = {version = "1.12.0", default-features = false, features = ["io-std", "macros", "net", "rt-multi-thread", "time", "sync"]}
tokio-stream = {version = "0.1.7", features = ["sync"]}
tokio-tungstenite = "0.15.0"
tokio-util = "0.6"
uuid = {version = "0.8", features = ["serde", "v4"]}
