[package]
edition = "2021"
name = "hotham-editor-protocol"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.37.2"
mint = {version = "0.5.9", features = ["serde"]}
openxr-sys = "0.9.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
