[package]
edition = "2021"
name = "hotham-editor"
version = "0.1.0"

[dependencies]
anyhow = "1.0.69"
ash = "0.37.2"
env_logger = "0.10.0"
glam = "0.22.0"
hotham-editor-protocol = {path = "../hotham-editor-protocol"}
lazy_vulkan = {git = "https://github.com/leetvr/lazy_vulkan", rev = "4e8b4982328f7bda76b10e6b7e83c65398917fef"}# main @ 20/2/2023
log = "0.4.17"
openxr-sys = "0.9.3"
winit = "0.28.1"
yakui = {git = "https://github.com/leetvr/yakui", rev = "a562328"}#add-texture-from-image branch @ 1/3/23
yakui-vulkan = {git = "https://github.com/leetvr/yakui", rev = "a562328"}#add-texture-from-image branch @ 1/3/23
yakui-winit = {git = "https://github.com/leetvr/yakui", rev = "a562328"}#add-texture-from-image branch @ 1/3/23

[target.'cfg(windows)'.dependencies]
uds_windows = "1.0.2"
