[package]
build = "build.rs"
edition = "2018"
license = "MIT OR Apache-2.0"
name = "hotham-simulator"
version = "0.2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
ash = "0.33.2"
ash-window = "0.7"
lazy_static = "1.4.0"
openxr-sys = "0.9"
rand = "0.8"
vk-shader-macros = "0.2.8"
winit = "0.26"
nalgebra = "0.31.0"

[build-dependencies]
bindgen = "*"
