[package]
build = "build.rs"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "hotham-simulator"
version = "0.2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
ash.workspace = true
ash-window.workspace = true
glam.workspace = true
lazy_static.workspace = true
openxr-sys.workspace = true
rand.workspace = true
vk-shader-macros.workspace = true
winit.workspace = true

[build-dependencies]
bindgen = "*"
