[package]
build = "build.rs"
description = "A framework for creating incredible standalone VR experiences"
edition = "2018"
keywords = ["vr", "gamedev", "openxr", "vulkan"]
license = "MIT OR Apache-2.0"
name = "hotham"
readme = "../README.md"
repository = "https://github.com/leetvr/hotham/"
version = "0.2.0"

[dependencies]
anyhow = "1.0"
ash = "0.33.2"
cpal = "0.13.5"
crossbeam = "0.8.1"
ctrlc = {version = "3", features = ["termination"]}
egui = "0.15"
generational-arena = "0.2.8"
gltf = {version = "1.0", features = ["KHR_lights_punctual", "KHR_materials_unlit", "names", "utils"], default-features = false}
hecs = "0.7.7"
id-arena = "2.2.1"
image = {version = "0.24.3", default-features = false, features = ["jpeg", "png"]}
itertools = "0.10.0"
ktx2 = "0.3"
memoffset = "0.6.5"
mint = "0.5.6"
nalgebra = {features = ["convert-mint", "serde-serialize"], version = "0.31.0"}
oddio = "0.5"
openxr = {features = ["loaded", "mint"], version = "0.16"}
rapier3d = "0.14.0"
ruzstd = "0.3"
serde = {version = "1.0", features = ["derive"]}
symphonia = {version = "0.5", default-features = false, features = ["mp3"]}
thiserror = "1.0"
uuid = {version = "1.1", features = ["serde", "v4"]}
vk-shader-macros = "0.2.8"

[target.'cfg(not(any(target_os = "macos", target_os = "ios")))'.dev-dependencies]
renderdoc = "0.10"

[dev-dependencies]
approx = "0.5"
serde_json = "1.0"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.19.0"
ndk = "0.6"
ndk-glue = "0.6"
