[package]
build = "build.rs"
description = "A framework for creating incredible standalone VR experiences"
edition = "2021"
keywords = ["vr", "gamedev", "openxr", "vulkan"]
license = "MIT OR Apache-2.0"
name = "hotham"
readme = "../README.md"
repository = "https://github.com/leetvr/hotham/"
version = "0.2.0"

[dependencies]
anyhow = "1.0"
ash = "0.33.2"
bitflags = "1.3"
cpal = "0.15.2"
ctrlc = {version = "3", features = ["termination"]}
egui = "0.15"
generational-arena = "0.2.8"
glam = {features = ["mint", "serde", "approx"], version = "0.21.3"}
gltf = {version = "1.0", features = ["KHR_lights_punctual", "KHR_materials_unlit", "names", "utils"], default-features = false}
half = "2.1.0"
hecs = "0.10.1"
hotham-asset-client = {path = "../hotham-asset-client"}
id-arena = "2.2.1"
image = {version = "0.24.3", default-features = false, features = ["jpeg", "png"]}
itertools = "0.10.0"
# ktx2 = "0.3"
ktx2 = {git = "https://github.com/BVE-Reborn/ktx2"}
memoffset = "0.8.0"
mint = "0.5.6"
notify-debouncer-mini = "0.2.1"
oddio = "0.5"
openxr = {features = ["loaded", "mint"], version = "0.17"}
rapier3d = "0.15"
ruzstd = "0.3"
serde = {version = "1.0", features = ["derive"]}
symphonia = {version = "0.5", default-features = false, features = ["mp3"]}
thiserror = "1.0"
tokio = {version = "1.0.1", default-features = false, features = ["rt"]}
vk-shader-macros = "0.2.8"

[target.'cfg(not(any(target_os = "macos", target_os = "ios")))'.dev-dependencies]
renderdoc = "0.10"

[dev-dependencies]
approx = "0.5"
serde_json = "1.0"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.19.0"
ndk = "0.6"
ndk-glue = "0.6"
