[package]
build = "build.rs"
description = "A framework for creating incredible standalone VR experiences"
edition = "2021"
keywords = ["vr", "gamedev", "openxr", "vulkan"]
license = "MIT OR Apache-2.0"
name = "hotham"
readme = "../README.md"
repository = "https://github.com/leetvr/hotham/"
version = "0.2.0"

[dependencies]
hotham-asset-client = { path = "../hotham-asset-client" }

ash.workspace = true
anyhow.workspace = true
bitflags.workspace = true
cpal.workspace = true
ctrlc.workspace = true
egui.workspace = true
generational-arena.workspace = true
glam.workspace = true
gltf.workspace = true
half.workspace = true
hecs.workspace = true
id-arena.workspace = true
image.workspace = true
itertools.workspace = true
ktx2.workspace = true
mint.workspace = true
notify-debouncer-mini.workspace = true
oddio.workspace = true
openxr.workspace = true
rapier3d.workspace = true
ruzstd.workspace = true
serde.workspace = true
symphonia.workspace = true
thiserror.workspace = true
tokio.workspace = true
vk-shader-macros.workspace = true

[features]
editor = []

[target.'cfg(not(any(target_os = "macos", target_os = "ios")))'.dev-dependencies]
renderdoc = "0.10"

[dev-dependencies]
approx = "0.5"
serde_json = "1.0"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.19.0"
ndk = "0.7"
ndk-glue = "0.7"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_System_Performance",
] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
libc = "0.2"
