[package]
edition = "2018"
name = "beat-saber-example"
version = "0.1.0"

[lib]
crate-type = ["lib", "cdylib"]

[[bin]]
name = "hotham_beat_saber_example"
path = "src/main.rs"

[dependencies]
hotham = {path = "../../hotham"}
hotham-debug-server = {path = "../../hotham-debug-server"}
legion = "0.4.0"
nalgebra = {features = ["convert-mint", "serde-serialize"], version = "0.29.0"}
rand = "0.8.0"
rapier3d = "0.11"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

[dev-dependencies]
approx = "0.5"

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.4.0"

[package.metadata.android]
apk_label = "Hotham Beat Saber Example"
fullscreen = true
runtime_libs = "../common_lib"
target_sdk_version = 26

[package.metadata.android.application]
debuggable = true

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"

[[package.metadata.android.uses_permission]]
name = "android.permission.ACCESS_NETWORK_STATE"

[[package.metadata.android.application.intent_filter]]
actions = ["android.intent.action.MAIN"]
categories = ["com.oculus.intent.category.VR", "android.intent.category.LAUNCHER"]
