[package]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "simple-scene-example"
version = "0.1.0"

[lib]
crate-type = ["lib", "cdylib"]

[[bin]]
name = "hotham_simple_scene_example"
path = "src/main.rs"

[dependencies]
hotham = {path = "../../hotham"}

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.6"

[package.metadata.android]
apk_label = "Hotham Simple Scene Example"
fullscreen = true
runtime_libs = "../common_lib"
target_sdk_version = 26

[package.metadata.android.application]
debuggable = true

[[package.metadata.android.application.intent_filter]]
actions = ["android.intent.action.MAIN"]
categories = ["com.oculus.intent.category.VR", "android.intent.category.LAUNCHER"]
