[package]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "skin_example"
version = "0.1.0"

[lib]
crate-type = ["lib", "cdylib"]

[[bin]]
name = "hotham_skin_example"
path = "src/main.rs"

[dependencies]
hotham = {path = "../../hotham"}

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.6"

[package.metadata.android]
apk_label = "Hotham Skin Example"
fullscreen = true
runtime_libs = "../common_lib"
target_sdk_version = 29

[package.metadata.android.application]
debuggable = true
label = "Hotham Skin Example"
theme = "@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen"

[package.metadata.android.application.activity]
config_changes = "screenSize|screenLayout|orientation|keyboardHidden|keyboard|navigation|uiMode"
launch_mode = "singleTask"
orientation = "landscape"

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"

[[package.metadata.android.uses_permission]]
name = "android.permission.access_network_state"

[[package.metadata.android.application.meta_data]]
name = "com.oculus.supportedDevices"
value = "quest|quest2"

[[package.metadata.android.application.meta_data]]
name = "com.oculus.intent.category.VR"
value = "vr_only"

[[package.metadata.android.application.activity.intent_filter]]
actions = ["android.intent.action.MAIN"]
categories = ["com.oculus.intent.category.VR", "android.intent.category.LAUNCHER"]

[[package.metadata.android.application.activity.meta_data]]
name = "com.oculus.vr.focusaware"
value = "true"

[[package.metadata.android.uses_feature]]
name = "android.hardware.vulkan.level"
required = true
version = 1

[[package.metadata.android.uses_feature]]
name = "android.hardware.vr.headtracking"
required = true
version = 1
